@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 11/06/2014 ==
+demonstar55: Tracking default sort will now be correct order
+
 == 11/03/2014 ==
 Secrets: Fixed an overflow in melee lifetap calculations (int16 vs int32)
 Secrets: Fixed overflow on AC and ATK values that can go out of range.
